--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "mock": "^0.1.1",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.6",
     "treer": "^1.0.4",
     "vue": "^3.3.4",
