--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "lottie-web": "^5.12.2",
     "mock": "^0.1.1",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.6",
